Details
-
Bug
-
Resolution: Done
-
P4: Low
-
5.6.0 Alpha, 5.15.3
-
Windows 7, Qt 5.4.1, Creator 3.3.1
Debian Jessie, Qt 5.3.2 (std packages)
-
908660847ccd632fbb18f605d387ce806ab1be1e (qt/qttools/dev) c021a6017600888165ab1807836a0965c9e82af5 (qt/qttools/6.1) 3b3516b60998e1e7f551422fe4ec11ed2e7c2a2a (qt/tqtc-qttools/5.15)
Description
Concerning the horizontal labels, the .ui file generated doesn't match the QTableWidget properties set in Designer.
Here is a Designer screenshot : http://www.mirari.fr/bN4S.png
Here is the application appearance : http://www.mirari.fr/Uq4a.png
(you can see the first line of data in the table, but not the labels)
Here is a minimalistic test case which reproduces the problem : http://www.mirari.fr/M5rn
Result :
the horizontal labels are not visible
Expected result :
the horizontal labels are visible
Reproductible :
always
How to reproduce :
compile then run the sample code in the link above
Workaround :
play randomly with the checkboxes of the QTableWidget properties...
The labels are not visible, even if I call setHorizontalHeaderLabels(<a QStringList>) manually (look at the constructor of ladderui.cpp in the test case).
The problem happens with :
- Windows 7, Qt 5.4.1, Creator 3.3.1, downloaded here : http://download.qt.io/official_releases/qt/5.4/5.4.1/qt-opensource-windows-x86-mingw491_opengl-5.4.1.exe.mirrorlist
- Debian Jessie (testing), Qt 5.3.2, standard package from the distro, up-to-date
Note that I got this behaviour in other projects.
Thanks in advance for your attention.
Detailed steps to reproduce (Jarek's version):
1. Open Designer and load QTBUG_49591.ui file.
2. Switch to Tab 1.
3. Click on table widget and change the horizontalHeaderVisible property to true.
4. Switch back to Tab 2.
5. Save changes and close Designer.
6. Repeat steps 1 and 2 - the horizontalHeaderVisible is still set to false. Changes from point 3 didn't save properly at step 5.
Attachments
Issue Links
- relates to
-
QTBUG-516 Widget visibility in Designer
-
- Closed
-