Qt Designer: Fix saving of item view header visibility on page based containers

Use Qt::WA_WState_Hidden for header visibility when the item
view is hidden.

Fixes: QTBUG-49591
Change-Id: Ic00f5bb8a2a1fe3d77358dc20c441bf763bb9204
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
(cherry picked from commit 908660847ccd632fbb18f605d387ce806ab1be1e)