src/designer/src/lib/shared/qdesigner_propertysheet_p.h
@@ -157,6 +157,7 @@ public:
                         PropertyGeometry,
                         PropertyChecked,
                         PropertyCheckable,
+                        PropertyVisible,
                         PropertyWindowTitle,
                         PropertyWindowIcon,
                         PropertyWindowFilePath,
